plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'com.gradleup.shadow' version '9.0.0'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
	mavenCentral()
}

// Create a configuration for JDA and its dependencies that will be shadowed
configurations {
	shade
	implementation.extendsFrom shade
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"staffchat" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"

	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// LuckPerms API (provided at runtime by the LuckPerms mod)
	compileOnly "net.luckperms:api:5.4"

	// Discord bot (JDA) - shadowed into the jar
	shade("net.dv8tion:JDA:5.2.1") {
		exclude module: 'opus-java'
	}

	// Gson - shadowed into the jar
	shade "com.google.code.gson:gson:2.10.1"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
	withSourcesJar()
}

shadowJar {
	configurations = [project.configurations.shade]
	archiveClassifier.set('')

	relocate 'com.google.gson', 'staffchat.libs.gson'
	relocate 'net.dv8tion.jda', 'staffchat.libs.jda'
	relocate 'com.squareup.okhttp3', 'staffchat.libs.okhttp3'
	relocate 'okio', 'staffchat.libs.okio'
	relocate 'org.jetbrains.kotlin', 'staffchat.libs.kotlin'
	relocate 'com.neovisionaries', 'staffchat.libs.nv'
	relocate 'net.sf.trove4j', 'staffchat.libs.trove4j'
	relocate 'com.fasterxml.jackson', 'staffchat.libs.jackson'
	relocate 'org.apache.commons.collections4', 'staffchat.libs.commons'

	inputs.property "projectName", project.name

	from("LICENSE") {
		rename { "${it}_${project.name}" }
	}
}

build.dependsOn shadowJar

jar {
	archiveClassifier.set('dev')
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}
}